--- a/.github/workflows/sass_compile.yml
+++ b/.github/workflows/sass_compile.yml
@@ -12,33 +12,33 @@ jobs:
       - name: Checkout source Git branch
         uses: actions/checkout@v2
         with:
-          ref: src-pages
-          fetch-depth: 10
-          submodules: true
+            ref: src-pages
+            fetch-depth: 10
+            submodules: true
 
       - name: Make destination directory for compiled CSS
-        run: mkdir -vp /tmp/demo-repo/css
+        run: mkdir -vp /tmp/repo-name/assets/css
 
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.4.7
         with:
           source: _scss/main.scss
-          destination: /tmp/demo-repo/css/main.css
+          destination: /tmp/repo-name/assets/css/main.css
 
       - name: Checkout destination Git branch
         uses: actions/checkout@v2
         with:
-          ref: pr-pages
-          fetch-depth: 1
+            ref: pr-pages
+            fetch-depth: 1
 
       - name: Move compiled CSS to path within pr-pages branch
-        run: mv /tmp/demo-repo/css assets/
+        run: mv /tmp/repo-name/assets/css assets/
 
       - name: Add and Commit changes to pr-pages branch
         run: |
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
-          git add css/*
+          git add assets/css/*
           git commit -m 'Updates compiled CSS files'
 
       - name: Push changes
