--- a/.github/workflows/sass_compile.yml
+++ b/.github/workflows/sass_compile.yml
@@ -1,7 +1,9 @@
 on:
   push:
-    branches:
-      - src-pages
+    branches-ignore: [master, main]
+    # Remove the line above to run when pushing to master
+  pull_request:
+    branches: [master, main]
 
 
 jobs:
