--- a/.github/workflows/sass_compile.yml
+++ b/.github/workflows/sass_compile.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.4.7
         with:
-          source: _scss/main.scss
-          destination: /tmp/demo-repo/assets/css/main.css
+          source: sass/main.scss
+          destination: /tmp/demo-repo/css/main.css
 
       - name: Checkout destination Git branch
         uses: actions/checkout@v2
@@ -34,13 +34,13 @@ jobs:
             fetch-depth: 1
 
       - name: Move compiled CSS to path within pr-pages branch
-        run: mv /tmp/demo-repo/assets/css assets/
+        run: mv /tmp/demo-repo/css
 
       - name: Add and Commit changes to pr-pages branch
         run: |
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
-          git add assets/css/*
+          git add /css/*
           git commit -m 'Updates compiled CSS files'
 
       - name: Push changes
