--- a/.github/workflows/sass_compile.yml
+++ b/.github/workflows/sass_compile.yml
@@ -1,8 +1,10 @@
 on:
-  push:
-    branches:
-      - src-pages
-
+  # push:
+  #   branches:
+  #     - compile-workflow
+      
+  pull_request:
+    branches: [master, main]
 
 jobs:
   build_css:
@@ -10,20 +12,21 @@ jobs:
 
     steps:
       - name: Checkout source Git branch
-        uses: actions/checkout@v2
+        # uses: actions/checkout@v2
+        uses: landru247/demo-repo@compile-workflow
         with:
             ref: src-pages
             fetch-depth: 10
             submodules: true
 
       - name: Make destination directory for compiled CSS
-        run: mkdir -vp /tmp/repo-name/assets/css
+        run: mkdir -vp /tmp/demo-repo/dist/css
 
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.4.7
         with:
           source: _scss/main.scss
-          destination: /tmp/repo-name/assets/css/main.css
+          destination: /tmp/demo-repo/dist/css/main.css
 
       - name: Checkout destination Git branch
         uses: actions/checkout@v2
@@ -32,13 +35,13 @@ jobs:
             fetch-depth: 1
 
       - name: Move compiled CSS to path within pr-pages branch
-        run: mv /tmp/repo-name/assets/css assets/
+        run: mv /tmp/demo-repo/dist/css assets/
 
       - name: Add and Commit changes to pr-pages branch
         run: |
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
-          git add assets/css/*
+          git add dist/css/*
           git commit -m 'Updates compiled CSS files'
 
       - name: Push changes
