--- a/.github/workflows/sass_compile.yml
+++ b/.github/workflows/sass_compile.yml
@@ -1,10 +1,8 @@
 on:
-  # push:
-  #   branches:
-  #     - compile-workflow
-      
-  pull_request:
-    branches: [master, main]
+  push:
+    branches:
+      - master
+
 
 jobs:
   build_css:
@@ -12,21 +10,20 @@ jobs:
 
     steps:
       - name: Checkout source Git branch
-        # uses: actions/checkout@v2
-        uses: landru247/demo-repo@compile-workflow
+        uses: actions/checkout@v2
         with:
-            ref: src-pages
+            ref: master
             fetch-depth: 10
             submodules: true
 
       - name: Make destination directory for compiled CSS
-        run: mkdir -vp /tmp/demo-repo/dist/css
+        run: mkdir -vp /tmp/demo-repo/assets/css
 
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.4.7
         with:
-          source: _scss/main.scss
-          destination: /tmp/demo-repo/dist/css/main.css
+          source: _sass/main.scss
+          destination: /tmp/demo-repo/assets/css/main.css
 
       - name: Checkout destination Git branch
         uses: actions/checkout@v2
@@ -35,13 +32,13 @@ jobs:
             fetch-depth: 1
 
       - name: Move compiled CSS to path within pr-pages branch
-        run: mv /tmp/demo-repo/dist/css assets/
+        run: mv /tmp/demo-repo/assets/css assets/
 
       - name: Add and Commit changes to pr-pages branch
         run: |
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
-          git add dist/css/*
+          git add assets/css/*
           git commit -m 'Updates compiled CSS files'
 
       - name: Push changes
