--- a/.github/workflows/sass_compile.yml
+++ b/.github/workflows/sass_compile.yml
@@ -1,9 +1,7 @@
 on:
   push:
-    branches-ignore: [master, main]
-    # Remove the line above to run when pushing to master
-  pull_request:
-    branches: [master, main]
+    branches:
+      - compile-workflow
 
 
 jobs:
@@ -14,18 +12,18 @@ jobs:
       - name: Checkout source Git branch
         uses: actions/checkout@v2
         with:
-            ref: src-pages
+            ref: compile-workflow
             fetch-depth: 10
             submodules: true
 
       - name: Make destination directory for compiled CSS
-        run: mkdir -vp /tmp/demo-repo/assets/css
+        run: mkdir -vp /demo-repo/assets/css
 
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.4.7
         with:
-          source: sass/main.scss
-          destination: /tmp/demo-repo/css/main.css
+          source: _sass/main.scss
+          destination: /demo-repo/assets/css/main.css
 
       - name: Checkout destination Git branch
         uses: actions/checkout@v2
@@ -34,13 +32,13 @@ jobs:
             fetch-depth: 1
 
       - name: Move compiled CSS to path within pr-pages branch
-        run: mv /tmp/demo-repo/css
+        run: mv /demo-repo/assets/css assets/
 
       - name: Add and Commit changes to pr-pages branch
         run: |
           git config --local user.email 'action@github.com'
           git config --local user.name 'GitHub Action'
-          git add /css/*
+          git add assets/css/*
           git commit -m 'Updates compiled CSS files'
 
       - name: Push changes
