--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -1,8 +1,9 @@
 on:
-  push:
-    branches:
-      - src-pages
-
+#  push:
+#    branches:
+#      - src-pages
+  pull_request:
+    branches: [master, main]
 
 jobs:
   build_css:
@@ -17,13 +18,13 @@ jobs:
             submodules: true
 
       - name: Make destination directory for compiled CSS
-        run: mkdir -vp /tmp/repo-name/assets/css
+        run: mkdir -vp /tmp/demo-repo/assets/css
 
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.4.7
         with:
           source: _scss/main.scss
-          destination: /tmp/repo-name/assets/css/main.css
+          destination: /tmp/demo-repo/assets/css/main.css
 
       - name: Checkout destination Git branch
         uses: actions/checkout@v2
@@ -32,7 +33,7 @@ jobs:
             fetch-depth: 1
 
       - name: Move compiled CSS to path within pr-pages branch
-        run: mv /tmp/repo-name/assets/css assets/
+        run: mv /tmp/demo-repo/assets/css assets/
 
       - name: Add and Commit changes to pr-pages branch
         run: |
