--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout source Git branch
         uses: actions/checkout@v2
         with:
-            ref: src-pages
+            ref: master
             fetch-depth: 10
             submodules: true
 
