--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -3,7 +3,7 @@ on:
 #    branches:
 #      - src-pages
   pull_request:
-    branches: [master, main]
+    branches: ${{ github.head_ref }}
 
 jobs:
   build_css:
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout source Git branch
         uses: actions/checkout@v2
         with:
-            ref: master
+            ref: ${{ github.head_ref }}
             fetch-depth: 10
             submodules: true
 
