--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -1,8 +1,10 @@
 on:
   push:
-    branches:
+    branches-ignore: [master, main]
+    # Remove the line above to run when pushing to master
+  pull_request:
+    branches: 
       - src-pages
-
 
 jobs:
   build_css:
