--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -1,7 +1,8 @@
 on:
 
   pull_request:
-    branches: [master]
+    branches:
+    - branch-1
 
 jobs:
   build_css:
@@ -11,7 +12,7 @@ jobs:
       - name: Checkout source Git branch
         uses: actions/checkout@v2
         with:
-          ref: master
+          ref: branch-1
           fetch-depth: 10
           submodules: true
 
