--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -1,6 +1,7 @@
 on:
   pull_request:
-    branches: [master, main]
+    branches:
+      - sr-pages
 
 jobs:
   build_css:
@@ -10,7 +11,7 @@ jobs:
       - name: Checkout source Git branch
         uses: actions/checkout@v2
         with:
-          ref: master
+          ref: sr-pages
           fetch-depth: 10
           submodules: true
 
