--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -1,7 +1,7 @@
 on:
   pull_request:
     branches:
-      - sr-pages
+      - ${{ github.ref }}
 
 jobs:
   build_css:
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout source Git branch
         uses: actions/checkout@v2
         with:
-          ref: sr-pages
+          ref: ${{ github.ref }}
           fetch-depth: 10
           submodules: true
 
