--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.4.7
         with:
-          source: _scss/main.scss
+          source: scss/main.scss
           destination: /tmp/demo-repo/assets/css/main.css
 
       - name: Checkout destination Git branch
