--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Checkout destination Git branch
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.ref }}
+          ref: pr-pages
           fetch-depth: 1
 
       - name: Move compiled CSS to path within pr-pages branch
@@ -43,13 +43,13 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+          branch: pr-pages
 
       - name: Initialize Pull Request
         uses: gha-utilities/init-pull-request@v0.0.4
         with:
           pull_request_token: ${{ secrets.GITHUB_TOKEN }}
-          head: ${{ github.ref }}
+          head: pr-pages
           base: master
           title: 'Updates site files from latest Actions build'
           body: >
