--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -1,8 +1,6 @@
 on:
-  push:
-    branches: [ $default-branch ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [master, main]
 
 jobs:
   build_css:
