--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Checkout destination Git branch
         uses: actions/checkout@v2
         with:
-          ref: pr-pages
+          ref: ${{ github.ref }}
           fetch-depth: 1
 
       - name: Move compiled CSS to path within pr-pages branch
