--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -1,6 +1,8 @@
 on:
-  pull_request:
-    branches: [master, main]
+  push:
+    branches:
+      - src-pages
+
 
 jobs:
   build_css:
@@ -10,9 +12,9 @@ jobs:
       - name: Checkout source Git branch
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.ref }}
-          fetch-depth: 10
-          submodules: true
+            ref: src-pages
+            fetch-depth: 10
+            submodules: true
 
       - name: Make destination directory for compiled CSS
         run: mkdir -vp /tmp/demo-repo/assets/css
@@ -20,17 +22,17 @@ jobs:
       - name: Compile CSS from SCSS files
         uses: gha-utilities/sass-build@v0.4.7
         with:
-          source: scss/main.scss
+          source: _scss/main.scss
           destination: /tmp/demo-repo/assets/css/main.css
 
       - name: Checkout destination Git branch
         uses: actions/checkout@v2
         with:
-          ref: pr-pages
-          fetch-depth: 1
+            ref: pr-pages
+            fetch-depth: 1
 
       - name: Move compiled CSS to path within pr-pages branch
-        run: mv /tmp/demo-repo/assets/css assets/
+        run: mv /tmp/demo-repoe/assets/css assets/
 
       - name: Add and Commit changes to pr-pages branch
         run: |
@@ -50,7 +52,7 @@ jobs:
         with:
           pull_request_token: ${{ secrets.GITHUB_TOKEN }}
           head: pr-pages
-          base: master
+          base: gh-pages
           title: 'Updates site files from latest Actions build'
           body: >
             Perhaps a multi-line description
